--- a/vercel.json
+++ b/vercel.json
@@ -2,38 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.py",
-      "use": "@vercel/python"
+      "src": "app py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
       "src": "/(.*)",
       "dest": "app.py"
     }
-  ],
-  "functions": {
-    "api/index.py": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
-  "excludeFiles": [
-    "venv/**",
-    "**/__pycache__/**",
-    "**/*.pyc",
-    "**/*.pyo",
-    "**/*.pyd",
-    "**/.pytest_cache/**",
-    "**/.coverage",
-    "**/*.so",
-    "**/*.egg-info/**",
-    "**/node_modules/**",
-    "**/.git/**"
   ]
 }
-
