--- a/requirements.txt
+++ b/requirements.txt
@@ -11,16 +11,13 @@ Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.7
 MarkupSafe==3.0.2
-matplotlib==3.9.2
-numpy==2.1.2
-packaging==24.1
-pandas==2.2.3
+matplotlib==3.9.2
+packaging==24.1
 pillow==11.0.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
-scikit-learn==1.5.2
-scipy==1.14.1
+scikit-learn==1.5.2
 seaborn==0.13.2
 six==1.16.0
 threadpoolctl==3.5.0
@@ -28,3 +25,6 @@ tzdata==2024.2
 Werkzeug==3.0.4
 gunicorn==20.1.0
 python-dotenv==0.19.1
+numpy==2.1.2 --only-binary=:all:
+scipy==1.14.1 --only-binary=:all:
+pandas==2.2.3 --only-binary=:all:
